# InverseProjections

./: .gitignore  CLAUDE.md  NNinv.py  README.md  demo.ipynb  demo_gradient_map.ipynb  gradient_map.py  lamp.py  multilateration.py  pyproject.toml  rbf_inv.py
examples/: demo.ipynb  demo_gradient_map.ipynb
src/inverse_projections/: __init__.py  lamp.py  multilateration.py  nninv.py
src/invprojection/: gradient_map.py
