[project]
name = "inverse-projections"
version = "0.1.0"
description = "Inverse projection techniques for dimensionality reduction"
readme = "README.md"
authors = [
    { name = "Yu Wang", email = "yuwang@duck.com" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
examples = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/wuyuyu1024/InverseProjections"
Repository = "https://github.com/wuyuyu1024/InverseProjections"

[project.scripts]
inverse-projections = "inverse_projections:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
